--- a/src/webparts/hRcontractProfile/components/HRcontractProfile.module.scss
+++ b/src/webparts/hRcontractProfile/components/HRcontractProfile.module.scss
@@ -1,6 +1,6 @@
 @import '~office-ui-fabric-react/dist/sass/References.scss';
 
-.hRcontractProfile {
+.hrContractProfile {
   overflow: hidden;
   padding: 1em;
   color: "[theme:bodyText, default: #323130]";
