--- a/src/webparts/hrContractsearch/components/HrContractsearch.module.scss
+++ b/src/webparts/hrContractsearch/components/HrContractsearch.module.scss
@@ -1,6 +1,6 @@
 @import '~office-ui-fabric-react/dist/sass/References.scss';
 
-.hrContractsearch {
+.hrContractSearch {
   overflow: hidden;
   padding: 1em;
   color: "[theme:bodyText, default: #323130]";
