--- a/src/webparts/helloSpfx/components/Recruitment.css
+++ b/src/webparts/helloSpfx/components/Recruitment.css
@@ -143,3 +143,7 @@ ul.status-lists>li:hover span.svg__iconbox.svg__icon--trash {
     border: none;
 }
 .ms-TooltipHost div#people .ms-BasePicker-text {background-color: var(--bs-body-bg);border: var(--bs-border-width) solid var(--bs-border-color) !important;height:29px}
+.valign-middle {
+    display: flex;
+    align-items: center;
+}
