--- a/src/webparts/employeeDashboardTemplated/components/style.css
+++ b/src/webparts/employeeDashboardTemplated/components/style.css
@@ -1,8 +1,11 @@
-.i_a_8474018e {
+/* .i_a_8474018e {
     border: 1px solid #e5e5e5;
     border-bottom: 0;
     flex-basis: 0;
     margin: 15px auto 0;
     max-width: 1435px;
     min-height: 0;
+} */
+.emptopheader {
+    background: #FAFAFA;
 }
