--- a/src/webparts/lastModified/components/LastModified.module.scss
+++ b/src/webparts/lastModified/components/LastModified.module.scss
@@ -1,6 +1,6 @@
 @import '~@fluentui/react/dist/sass/References.scss';
 
-.lastModidiedItems {
+.lastModified {
   overflow: hidden;
   padding: 1em;
   color: "[theme:bodyText, default: #323130]";
